# hermes-hub

./: .gitignore  CLAUDE.md  Dockerfile.server  README.md  docker-compose.yml  hermes_hub_codex_pr_execution_manual.md  hermes_hub_prd.md  hermes_hub_prd_v0.8_post_mvp_roadmap.md  package-lock.json  package.json  pnpm-lock.yaml
agents/hub-agent/: Dockerfile  pyproject.toml
agents/hub-agent/hermes_hub_agent/: client.py  command_runner.py  commands.py  config.py  domain.py  files.py  heartbeat.py  hermes.py  hermes_imports.py  hub_client.py  main.py  profile_inspector.py  query_channel.py  runtime.py  scanner.py  security.py  service.py  settings.py
agents/hub-agent/tests/: test_command_runner_paths.py  test_setup_orchestrator.py
docs/: agent-profile-requirements.md  alpha-release-checklist.md  hermes-hub-execution-plan.md  hermes-hub-requirements.md  hermes-hub-technical-design.md  hermes_hub_prd_v1.5.md  manual-test-checklist.md
docs/agents/: domain.md
