[project]
name = "hermes-hub-agent"
version = "0.1.0"
description = "Hermes Hub node worker for local Hermes profile discovery."
requires-python = ">=3.11"
dependencies = [
    "httpx[socks]==0.28.1",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "ruamel.yaml==0.18.17",
    "pydantic==2.12.5",
    "psutil==7.2.2",
    "rich==14.3.3",
    "tenacity==9.1.4",
    "requests==2.33.0",
    "jinja2==3.1.6",
    "prompt_toolkit==3.0.52",
    "croniter==6.0.0",
    "PyJWT[crypto]==2.12.1",
    "tzdata==2025.3; sys_platform == 'win32'",
    "openai==2.24.0",
    "fire==0.7.1",
]

[project.scripts]
hermes-hub-agent = "hermes_hub_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
